# px4_msgs

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUALITY_DECLARATION.md  README.md  SECURITY.md  package.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  build_debian.yml  create-release.yml  package.yml  release.yml
container/: Dockerfile  build_deb_container.sh
debian/: .gitignore  changelog  control  copyright  files  rules
msg/: ActuatorControls.msg  ActuatorControls1.msg  ActuatorControls2.msg  ActuatorControlsStatus.msg  ActuatorControlsVirtualMc.msg  ActuatorOutputsSim.msg  CameraTrigger.msg  EscStatus.msg  EstimatorAidSrcAirspeed.msg  EstimatorAidSrcFakePos.msg  EstimatorAidSrcMag.msg  EstimatorAttitude.msg  EstimatorBias.msg  EstimatorInnovationTestRatios.msg  EstimatorInnovations.msg  EstimatorLocalPosition.msg  EstimatorOdometry.msg  EstimatorStatusFlags.msg  FwVirtualAttitudeSetpoint.msg  GimbalV1Command.msg  ManualControlInput.msg  ObstacleDistanceFused.msg  OsdOverlay.msg  RadarDetection.msg  SafetyButton.msg  SensorGps.msg  SensorsStatusBaro.msg  TelemetryStatus.msg  TrajectorySetpoint.msg  VehicleAngularVelocity.msg  VehicleAngularVelocityGroundtruth.msg  VehicleAttitude.msg  VehicleAttitudeGroundtruth.msg  VehicleAttitudeSetpoint.msg  VehicleCommand.msg  VehicleGlobalPosition.msg  VehicleGlobalPositionGroundtruth.msg  VehicleLocalPosition.msg  VehicleLocalPositionGroundtruth.msg  VehicleMocapOdometry.msg  (+4 more)
px4_msgs/msg/: VehicleGlobalPosition.msg  VehicleLocalPosition.msg
px4_msgs_old/: CMakeLists.txt  package.xml  rename_msg_type.py.in
px4_msgs_old/msg/: VehicleAttitudeV2.msg
scripts/: build_deb_host.sh  generate_changelog.sh  generate_release_notes.sh
subscriber_test/: CMakeLists.txt  package.xml
subscriber_test/src/: listener.cpp
translation_node/: CMakeLists.txt  package.xml
translation_node/src/: graph.h  main.cpp  monitor.cpp  monitor.h  pub_sub_graph.cpp  pub_sub_graph.h  ros_translations.cpp  ros_translations.h  service_graph.h  template_util.h  translation_util.h  translations.cpp  translations.h  util.h  vehicle_attitude_v2.h  vehicle_attitude_v3.h  vehicle_local_global_position_v2.h
translation_node/test/: graph.cpp  pub_sub.cpp  services.cpp
translation_node/test/srv/: TestV0.srv
