<?xml version="1.0"?>
<package format="2">
  <name>px4_msgs</name>
  <version>1.0.0</version>
  <description>Package with the ROS-equivalent of PX4 uORB msgs</description>
  <maintainer email="nuno.marques@dronesolutions.io">Nuno Marques</maintainer>
  <author email="nuno.marques@dronesolutions.io">Nuno Marques</author>
  <license>BSD 3-Clause</license>

  <url type="repository">https://github.com/PX4/px4_msgs.git</url>
  <url type="bugtracker">https://github.com/PX4/px4_msgs/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
    <architecture_independent/>
  </export>
</package>
