<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_msgs</name>
  <version>1.17.0~dev</version>
  <description>Package with the ROS-equivalent of PX4 uORB msgs</description>
  <maintainer email="mrpollo@gmail.com">Ramon Roche</maintainer>
  <author email="nuno.marques@dronesolutions.io">Nuno Marques</author>
  <license>BSD 3-Clause</license>
  <url type="website">https://px4.io</url>
  <url type="repository">https://github.com/PX4/px4_msgs</url>
  <url type="bugtracker">https://github.com/PX4/px4_msgs/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>ros_environment</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
