<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_msgs</name>
  <version>1.17.0</version>
  <description>Package with the ROS-equivalent of PX4 uORB msgs</description>
  <maintainer email="nuno.marques@dronesolutions.io">Nuno Marques</maintainer>
  <maintainer email="beniamino.pozzan@gmail.com">Beniamino Pozzan</maintainer>
  <maintainer email="mrpollo@gmail.com">Ramon Roche</maintainer>
  <license>BSD-3-Clause</license>

  <url type="website">https://github.com/PX4/px4_msgs</url>
  <url type="repository">https://github.com/PX4/px4_msgs</url>
  <url type="bugtracker">https://github.com/PX4/px4_msgs/issues</url>

  <author email="nuno.marques@dronesolutions.io">Nuno Marques</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>builtin_interfaces</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
