<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>translation_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="beat-kueng@gmx.net">beat</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <depend>rclcpp</depend>
  <depend>px4_msgs</depend>
  <depend>px4_msgs_old</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
